--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     <div class="social-item">
                         <span class="social-title">Social</span>
                         <ul>
-                            <li><a href="about.html#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="about.html#"><i class="fab fa-pinterest-p"></i></a></li>
-                            <li><a href="about.html#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="about.html#"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-medium"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         </ul>
                     </div>
                     <!-- Social Item End -->
@@ -137,25 +137,25 @@ across broad sectors of building and civil engineering works.</p>
                                         </li>
                                         <li>
                                             <i class="fas fa-map-marker-alt"></i>
-                                            <p>Location: Kampala, Uganda</p>
+                                            <p>Najjerra - Bulabira, Kampala, Uganda</p>
                                         </li>
                                         <li>
                                             <i class="fas fa-envelope-open-text"></i>
-                                            <p>Mail: mercynobertalupo@gmail.com</p>
+                                            <p> mercynobertalupo@gmail.com</p>
                                         </li>
                                     </ul>
                                     <ul>
                                         <li>
                                             <i class="far fa-calendar-alt"></i>
-                                            <p>Date of Birth: 10th December 1996</p>
+                                            <p> 10th December 1996</p>
                                         </li>
                                         <li>
                                             <i class="fas fa-user-graduate"></i>
-                                            <p>Degree: Master of Computer</p>
+                                            <p> Master of Business Adminstration</p>
                                         </li>
                                         <li>
                                             <i class="fas fa-phone-alt"></i>
-                                            <p>Phone: +997 4638 255</p>
+                                            <p>Phone: +256-751 295506</p>
                                         </li>
                                     </ul>
                                     <span class="bash"></span>
@@ -164,10 +164,10 @@ across broad sectors of building and civil engineering works.</p>
                                 <!-- About Social Start -->
                                 <div class="about-social">
                                     <ul>
-                                        <li><a href="about.html#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="about.html#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="about.html#"><i class="fab fa-pinterest-p"></i></a></li>
-                                        <li><a href="about.html#"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-medium"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                        
                                     </ul>
                                 </div>
