--- a/exp.html
+++ b/exp.html
@@ -70,35 +70,17 @@
                         <div class="overlay"></div>
                         <ul>
                             <li>
-                                <a href="index.html"><i class="fas fa-home"></i>
+                                <a href="index.html" class="active"><i class="fas fa-home"></i>
                                     <span>Home</span>
                                 </a>
                             </li>
+                          
                             <li>
-                                <a href="portfolio.html"><i class="fas fa-briefcase"></i>
-                                    <span>Portfolio</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="about.html"><i class="fas fa-file-invoice"></i>
+                                <a href="exp.html" ><i class="fas fa-file-invoice"></i>
                                     <span>About</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="resume.html" class="active"><i class="fas fa-table"></i>
-                                    <span>Resume</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="services.html"><i class="fas fa-th"></i>
-                                    <span>Services</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="blog.html"><i class="fab fa-blogger-b"></i>
-                                    <span>Blog</span>
-                                </a>
-                            </li>
+                         
                             <li>
                                 <a href="contact.html"><i class="fas fa-phone-alt"></i>
                                     <span>Contact</span>
@@ -111,10 +93,10 @@
                     <div class="social-item">
                         <span class="social-title">Social</span>
                         <ul>
-                            <li><a href="resume.html#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="resume.html#"><i class="fab fa-pinterest-p"></i></a></li>
-                            <li><a href="resume.html#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="resume.html#"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-medium"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         </ul>
                     </div>
                     <!-- Social Item End -->
