--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </li>
                           
                             <li>
-                                <a href="about.html" ><i class="fas fa-file-invoice"></i>
+                                <a href="exp.html" ><i class="fas fa-file-invoice"></i>
                                     <span>About</span>
                                 </a>
                             </li>
@@ -115,7 +115,7 @@
                         <div class="col-lg-5">
                             <!-- About Profile Start -->
                             <div class="about-profile">
-                                <img src="img/about/about-profile.png" alt="about-profile">
+                                <img src="Screenshot 2025-06-15 at 14.57.20.png" alt="about-profile">
                             
                             </div>
                             <!-- About Profile End -->
