--- a/exp.html
+++ b/exp.html
@@ -70,13 +70,13 @@
                         <div class="overlay"></div>
                         <ul>
                             <li>
-                                <a href="index.html" class="active"><i class="fas fa-home"></i>
+                                <a href="index.html" ><i class="fas fa-home"></i>
                                     <span>Home</span>
                                 </a>
                             </li>
                           
                             <li>
-                                <a href="exp.html" ><i class="fas fa-file-invoice"></i>
+                                <a href="exp.html" class="active"><i class="fas fa-file-invoice"></i>
                                     <span>About</span>
                                 </a>
                             </li>
