--- a/contact.html
+++ b/contact.html
@@ -76,13 +76,13 @@
                             </li>
                           
                             <li>
-                                <a href="exp.html" class="active"><i class="fas fa-file-invoice"></i>
+                                <a href="exp.html" ><i class="fas fa-file-invoice"></i>
                                     <span>About</span>
                                 </a>
                             </li>
                          
                             <li>
-                                <a href="contact.html"><i class="fas fa-phone-alt"></i>
+                                <a href="contact.html" class="active"><i class="fas fa-phone-alt"></i>
                                     <span>Contact</span>
                                 </a>
                             </li>
@@ -110,7 +110,8 @@
                 <div class="container">
                     <div class="title">
                         <h2>Contact Me</h2>
-                        <p class="des-text">Many client are searching hardworker for their personal or business project to done. I will assured you that i’m well know these plaform. Already sertified Computer Sceince.</p>
+                        <p class="des-text">I have a portfolio of relevant work demonstrating exceptional competencies
+across broad sectors of building and civil engineering works.</p>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-lg-4">
@@ -120,7 +121,6 @@
                                         <i class="fas fa-phone-alt"></i>
                                     </a>
                                     <h5>Phone: <span>09988663322, 7788773377</span></h5>
-                                    <p>Call me Stet clita kasd gub luiergre takimata sanctus est orem ipsum.</p>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,6 @@
                                         <i class="fas fa-envelope"></i>
                                     </a>
                                     <h5>Mail: <span>Muomilarangar@gmail.com</span></h5>
-                                    <p>Call me Stet clita kasd gub luiergre takimata sanctus est orem ipsum.</p>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +141,6 @@
                                         <i class="fas fa-map-marker-alt"></i>
                                     </div>
                                     <h5>Location: <span>CS-124, NY, NewYork, USA</span></h5>
-                                    <p>Call me Stet clita kasd gub luiergre takimata sanctus est orem ipsum.</p>
                                 </div>
                             </div>
                         </div>
