--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@ across broad sectors of building and civil engineering works.</p>
                                     <a href="tel:09988663322" class="contact-icon">
                                         <i class="fas fa-phone-alt"></i>
                                     </a>
-                                    <h5>Phone: <span>09988663322, 7788773377</span></h5>
+                                    <h5>Phone: <span>+256-751 295506/span></h5>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +130,7 @@ across broad sectors of building and civil engineering works.</p>
                                     <a class="contact-icon" href="mailto:Muomilarangar@gmail.com">
                                         <i class="fas fa-envelope"></i>
                                     </a>
-                                    <h5>Mail: <span>Muomilarangar@gmail.com</span></h5>
+                                    <h5>Mail: <span>mercynobertalupo@gmail.com/span></h5>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@ across broad sectors of building and civil engineering works.</p>
                                     <div class="contact-icon">
                                         <i class="fas fa-map-marker-alt"></i>
                                     </div>
-                                    <h5>Location: <span>CS-124, NY, NewYork, USA</span></h5>
+                                    <h5>Location: <span>Najjerra - Bulabira, Kampala, Uganda</span></h5>
                                 </div>
                             </div>
                         </div>
