--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@ across broad sectors of building and civil engineering works.</p>
                                     <a class="contact-icon" href="mailto:Muomilarangar@gmail.com">
                                         <i class="fas fa-envelope"></i>
                                     </a>
-                                    <h5>Mail: <span>mercynobertalupo@gmail.com/span></h5>
+                                    <h5>Mail: <span>mercynobertalupo@gmail.com</span></h5>
                                 </div>
                             </div>
                         </div>
