--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@ across broad sectors of building and civil engineering works.</p>
                                     <a href="tel:09988663322" class="contact-icon">
                                         <i class="fas fa-phone-alt"></i>
                                     </a>
-                                    <h5>Phone: <span>+256-751 295506/span></h5>
+                                    <h5>Phone: <span>+256-751 295506</span></h5>
                                 </div>
                             </div>
                         </div>
