--- a/exp.html
+++ b/exp.html
@@ -221,32 +221,32 @@
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
-                <h5>University Graduation</h5>
-                <h6>Harvard University - 2010-2017</h6>
+                <h5>Uganda Advanced Certificate of Education (UACE)</h5>
+                <h6>Naalya Secondary School, Bweyogerere</h6>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
-                <h5>Computer Science</h5>
-                <h6>Harvard University - 2010-2017</h6>
+                <h5>Bachelors of Science in Building Economics</h5>
+                <h6>Kyambogo University Department of Lands & Architectural studies</h6>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
-                <h5>Envato Market</h5>
-                <h6>Envato University - 2014-2020</h6>
+                <h5>Postgraduate Diploma In Project Planning And Management</h5>
+                <h6>Uganda Management Institute School of Business and Management</h6>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
-                <h5>Master of Programming</h5>
-                <h6>California IT University - 2012-2016</h6>
+                <h5>Masters in Construction Management</h5>
+                <h6>Makerere University</h6>
               </div>
             </div>
           </div>
