--- a/index.html
+++ b/index.html
@@ -145,13 +145,10 @@ across broad sectors of building and civil engineering works.</p>
                                         </li>
                                     </ul>
                                     <ul>
-                                        <li>
-                                            <i class="far fa-calendar-alt"></i>
-                                            <p> 10th December 1996</p>
-                                        </li>
+                                       
                                         <li>
                                             <i class="fas fa-user-graduate"></i>
-                                            <p> Master of Business Adminstration</p>
+                                            <p> Masters in Construction Management</p>
                                         </li>
                                         <li>
                                             <i class="fas fa-phone-alt"></i>
