--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Lico | Personal/Portfolio/Resume Template</title>
+    <title>ALUPO MERCY NOBERT</title>
 
     <!-- Apple Favicon -->
     <link rel="apple-touch-icon" href="img/logo/favicon.png">
